# Password-database-With-special-stuff

./: Database.txt  Database_Code.py  Decryption_Code.py  Encryption_Code.py  Password_Generator.py  Pincode_Generator.py  README.md  pyproject.toml
Färdigt program 1_dot_5/: Action_Selection_Menu.py  Database.txt  Decryption_Code.py  Pincode_Generator.py
Program Files/: Action_Selection_Menu.py  Database.txt  Database_Code.py  EncryptionKey_Generator.py  How_To_Use.py
Version 1.5/: Action_Selection_Menu.py  Database_Code.py  Encryption_Code.py  How_To_Use.py  Password_Generator2_dot_0.py  test.key
Version1_dot_1/: Action_Selection_Menu.py  EncryptionKey_Generator.py  How_To_Use.py  Password_Generator.py  Pincode_Generator.py  addfoldertogithub.txt
src/: __main__.py  config.json  encryption.py  passwords.py
