[tool.poetry]
name = "password-database-with-special-stuff"
version = "2.0.0"
description = "A utility developed to assist in password generation, data storage, and encryption."
authors = ["VapenHem ", "Akins <marleyakins@gmail.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.10"
termcolor = "^1.1.0"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
