[tool.poetry]
name = "password-database-with-special-stuff"
version = "2.0.0"
description = "A utility developed to assist in password generation, data storage, and encryption."
authors = ["VapenHem ", "Akins <marleyakins@gmail.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
termcolor = "^1.1.0"
numpy = "^1.23.1"
cryptography = "^37.0.4"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
